# ledger

./: README.md  alembic.ini  install.sh  pyproject.toml  update.sh
aider/: conventions.md  prompt.md  roadmap.md
alembic/: env.py
alembic/versions/: 555b95d528b0_description_of_change.py  initial_schema.py
finance_cli/: config.py  storage.py
ledger/: __init__.py  analysis.py  categories.py  cli.py  config.py  models.py  storage.py
tests/: __init__.py
