[project]
name = "ledger"
version = "0.1.0"
description = "A Personal CLI Finance Tool"

[tool.hatch.build.targets.wheel]
packages = ["ledger"]
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pandas>=2.0.0",
    "click>=8.0.0",
    "colorama>=0.4.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true

[project.scripts]
ledger = "ledger.cli:app"
